Scale animation added to left eye

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">android-animated-vector</string>
+    <string name="main_img">cute little robot</string>
+
 </resources>
